# Clinical-Trial-Analytics-Dashboard

./: .env  .gitignore  CHANGELOG.md  CLINICAL_TRIAL_ANALYTICAL_EDA.ipynb  DASHBOARD_WEAK_POINTS_ANALYSIS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  ML_PROPOSALS_DOCUMENTATION.md  README.md  SQL_QUERIES_DOCUMENTATION.md  docker-compose.yaml  pyproject.toml  requirements.txt
ddbb/: check_ddbb.py  create_and_poblate_ddbb.py  ddbb.sql  search_condition_name.py  update_continent_from_country.py
src/: app.py  config.py  database_service.py  enrollment_success.py  error_handler.py  validators.py
src/results/: enrollment_success_metrics.csv
